--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Snake</title>
+    
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Retro Snake (PWA)</title>
+    <meta name="description" content="My Awesome App description">
+    <link rel="apple-touch-icon" href="/img/icons/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/img/icons/mask-icon.svg" color="#FFFFFF">
+    <meta name="theme-color" content="#ec4899">
   </head>
   <body>
     <div id="app"></div>
